# NIS1336_2023-2024-3

./: Account.cpp  Account.h  CMakeLists.txt  README.md  cli.cpp  cli.h  head.h  task.cpp  task.h  test.cpp  thread2.cpp  thread2.h  types.h
doc/: design.md  任务管理器项目汇报.pptx
inc/: Account.h  cli.h  head.h  run.h  task.h  thread1.h  thread2.h
src/: Account.cpp  CMakeLists.txt  cli.cpp  main  main.cpp  run.cpp  task.cpp  thread1.cpp  thread2.cpp
test/: test.sh
