cmake_minimum_required(VERSION 3.10)

project(test)

include_directories(inc)

add_subdirectory(src)

set(CMAKE_INSTALL_BINDIR "${CMAKE_SOURCE_DIR}/bin")
set(CMAKE_INSTALL_LIBDIR "${CMAKE_SOURCE_DIR}/lib")

install(TARGETS MySchedule MyLibrary
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})

